k8s/manifests/backend_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backend
  name: backend-service
spec:
  selector:
    app: backend
  type: ClusterIP
  ports:
    - name: service-port
      port: 8080
      protocol: TCP
      targetPort: deployment-port
